# python-fumis

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  RESEARCH.md  package-lock.json  package.json  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_test.txt  setup.py  tox.ini
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: feature_request.yaml  issue.yaml
.github/workflows/: ci.yml  linting.yaml  lock.yaml  release-drafter.yaml  release.yaml  scorecard.yml  tests.yaml  typing.yaml
examples/: control.py  diagnostics.py  error_handling.py  raw_api.py  ruff.toml  status.py  timer.py
fumis/: const.py  fumis.py  models.py
src/fumis/: __init__.py  _cli.py  const.py  exceptions.py  fumis.py  models.py
src/fumis/cli/: __init__.py  async_typer.py  ruff.toml  tui.py
tests/: __init__.py  conftest.py  ruff.toml  test_actions.py  test_fumis.py  test_info.py  test_request.py
tests/__snapshots__/: test_fumis.ambr
tests/cli/: __init__.py  test_cli.py
tests/cli/__snapshots__/: test_cli.ambr
tests/fixtures/: austroflamm_clou_duo.json  austroflamm_clou_duo_cooled.json  austroflamm_clou_duo_error.json  austroflamm_clou_duo_ignition.json  clou_duo_hybrid.json  error_auth_invalid.json  error_not_found.json  error_server_error.json  error_stove_offline.json  info.json  info_alert.json  info_shutting_down.json  info_starting.json  pellet_stove_simple.json  pellet_stove_unknown.json
