[project]
name = "fumis"
version = "0.0.0"
description = "Asynchronous Python client for the Fumis WiRCU API."
authors = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
maintainers = [{ name = "Franck Nijhof", email = "opensource@frenck.dev" }]
license = "MIT"
requires-python = ">=3.11"
readme = "README.md"
keywords = [
  "api",
  "async",
  "austroflamm",
  "client",
  "eco-spar",
  "fumis",
  "heating",
  "heta",
  "home-assistant",
  "home-automation",
  "iot",
  "pellet-stove",
  "smart-home",
  "stove",
  "wircu",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
packages = [{ include = "fumis", from = "src" }]
dependencies = ['aiohttp (>=3.0.0)', 'awesomeversion (>=22.0.0)', 'mashumaro (>=3.13,<4.0.0)', 'orjson (>=3.9.8)', 'yarl (>=1.6.0)']

[project.optional-dependencies]
cli = ["rich>=14.0.0", "textual>=8.0.0,<9.0.0; python_version<'4.0'", "textual-plotext>=1.0.0,<2.0.0; python_version<'4.0'", "typer>=0.15.1"]

[project.scripts]
fumis = "fumis._cli:main"

[tool.poetry]
requires-poetry = '>=2.0'

[project.urls]
homepage = "https://github.com/frenck/python-fumis"
repository = "https://github.com/frenck/python-fumis"
documentation = "https://github.com/frenck/python-fumis"
"Bug Tracker" = "https://github.com/frenck/python-fumis/issues"
Changelog = "https://github.com/frenck/python-fumis/releases"

[tool.poetry.group.dev.dependencies]
aioresponses = "0.7.8"
codespell = "2.4.2"
covdefaults = "2.3.0"
coverage = { version = "7.13.5", extras = ["toml"] }
ty = "0.0.32"
pre-commit-hooks = "6.0.0"
prek = "0.3.11"
pylint = "4.0.5"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
ruff = "0.15.12"
safety = "3.7.0"
syrupy = "5.1.0"
typer = "0.24.2"
yamllint = "1.38.0"
zizmor = "1.24.1"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["fumis"]

[tool.coverage.report]
show_missing = true
fail_under = 90
omit = [
  "src/fumis/_cli.py",
  "src/fumis/cli/async_typer.py",
  "src/fumis/cli/tui.py",
]

[tool.ty.environment]
python-version = "3.11"

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint.DESIGN]
max-attributes = 50
max-locals = 30

[tool.pylint."MESSAGES CONTROL"]
disable = ["duplicate-code", "format", "unsubscriptable-object", "wrong-import-order"]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",  # Opinionated warning on disallowing dynamically typed expressions
  "TRY301",  # Abstract raise to inner function — not useful for this codebase
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["fumis"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.codespell]
ignore-words-list = "dout,modul"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
